# ts4modmanager

./: Cargo.toml  README.md  jsconfig.json  package.json
crates/cli/: Cargo.toml
crates/cli/src/: emoji.rs  main.rs
crates/cli/src/commands/: debug.rs  install.rs  list.rs  mod.rs  uninstall.rs  update.rs
crates/cli/src/io/: mod.rs  show.rs
crates/core/: Cargo.toml
crates/core/src/downloaders/: download_page.rs  find_for_url.rs  mod.rs  modthesims.rs  parse_content.rs
crates/core/src/downloaders/parser/: date_parser.rs  file_parser.rs  mod.rs  mod_info_parser.rs
src/: ts4modmanager.js
src/cli/: io.js  parser.js
src/cli/commands/: help.js  index.js  install.js  list.js  noop.js  uninstall.js  update.js  version.js
src/core/: downloader.js  page-parser.js  util.js
src/core/downloaders/: index.js  modthesims.js
