[package]
name = "cli"
version = "0.1.0"
authors = ["Fran González <fgzv@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../core" }

console = "0.12.0"
seahorse = "1.0.0"
dialoguer = "0.6.2"
