[package]
name = "core"
version = "0.1.0"
authors = ["Fran González <fgzv@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.1.1"
chrono = "0.4.19"
scraper = "0.12.0"
minreq = { version="2.2.1", features = ["https-rustls"] }
